k8s/infra/k8s-dev/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      automountServiceAccountToken: false
      containers:
        - name: expiration-redis
          # This comes from https://hub.docker.com/_/redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  # The 'name' represents the domain in the URL
  name: expiration-redis-srv
spec:
  type: ClusterIP
  selector:
    app: expiration-redis
  ports:
    # The name is for logging purposes
    - name: expiration-redis-port
      protocol: TCP
      # The port of this service
      port: 6379
      # This is the actual port on which your application is running inside the container
      # Also worth noting that if targetPort is not set, it will default to the same value as port. E.g. 80:80 for service port 80 targeting container port 80.
      targetPort: 6379
