k8s/infra/k8s-dev/pebble-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pebble-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pebble
  template:
    metadata:
      labels:
        app: pebble
    spec:
      containers:
        - name: pebble
          image: letsencrypt/pebble
---
apiVersion: v1
kind: Service
metadata:
  name: pebble
spec:
  type: ClusterIP
  selector:
    app: pebble
  ports:
    - name: pebble-api
      protocol: TCP
      port: 14000
      targetPort: 14000
    - name: pebble-management
      protocol: TCP
      port: 15000
      targetPort: 15000
